GNOME Bugzilla – Bug 760120
dashdemux: memory leak in gst_dash_demux_update_manifest_data
Last modified: 2016-02-09 20:47:21 UTC
During manifest update, the new manifest is parsed using a separate mpd_client (new_client). This variable is not freed in case of errors. Also, the buffer is not unmapped.
Created attachment 318207 [details] [review] proposed patch
commit 632111ae144034b783eca28a24fc94669f49d0c6 Author: Thiago Santos <thiagoss@osg.samsung.com> Date: Tue Feb 9 17:24:50 2016 -0300 dashdemux: plug mpd client leak On parsing error, free the mpd client object https://bugzilla.gnome.org/show_bug.cgi?id=760120 commit 319105182879a9e2a06a5e9d9f46219fc1430c15 Author: Florin Apostol <florin.apostol@oregan.net> Date: Mon Jan 4 12:12:45 2016 +0000 dashdemux: fix memory leak in gst_dash_demux_update_manifest_data new_client local variable was not freed in case of errors. Also, the buffer is not unmapped. https://bugzilla.gnome.org/show_bug.cgi?id=760120