dashdemux: fix memory leak in gst_dash_demux_update_manifest_data

new_client local variable was not freed in case of errors.
Also, the buffer is not unmapped.

https://bugzilla.gnome.org/show_bug.cgi?id=760120